refactor lawEnforcement
